roles/iptables/files/rules.v4
*filter
-F
-X
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

# loopback allowed
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT

# ping & ssh
-A INPUT -p icmp --icmp-type echo-request -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT

# allow established/related INPUT
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

-N LOG_INPUT
-A INPUT -j LOG_INPUT
-A LOG_INPUT -j LOG --log-prefix "IPTABLES-INPUT: "
-A LOG_INPUT -j DROP

-N LOG_FWD
-A FORWARD -j LOG_FWD
-A LOG_FWD -j LOG --log-prefix "IPTABLES-FORWARD: "
-A LOG_FWD -j DROP

COMMIT
